# Object-Oriented-Programming

./: README.md
Aircrafts/: Aircraft.cpp  Aircraft.h  CMakeLists.txt  Helicopter.cpp  Helicopter.h  HotAirBalloon.cpp  HotAirBalloon.h  Plane.cpp  Plane.h  Repository.cpp  Repository.h  Service.cpp  Service.h  UI.cpp  UI.h  input.txt  main.cpp
Appliances/: Appliance.cpp  Appliance.h  CMakeLists.txt  Controller.cpp  Controller.h  DishWasher.cpp  DishWasher.h  Refrigerator.cpp  Refrigerator.h  UI.cpp  UI.h  main.cpp
Bills/: Bill.cpp  Bill.h  CMakeLists.txt  Service.cpp  Service.h  gui.cpp  gui.h  gui.ui  main.cpp
Buildings/: Block.cpp  Block.h  Building.cpp  Building.h  CMakeLists.txt  Controller.cpp  Controller.h  House.cpp  House.h  UI.cpp  UI.h  main.cpp  test.cpp  test.h
Cars/: CMakeLists.txt  Car.cpp  Car.h  Service.cpp  Service.h  gui.cpp  gui.h  gui.ui  main.cpp  test.h
Medical Analysis/: BMI.cpp  BMI.h  BP.cpp  BP.h  CMakeLists.txt  MedicalAnalysis.cpp  MedicalAnalysis.h  Person.cpp  Person.h  UI.cpp  UI.h  input.txt  main.cpp
Shopping List/: CMakeLists.txt  domain.cpp  domain.h  gui.cpp  gui.h  gui.ui  main.cpp  service.cpp  service.h
Tape GUI/: Action.cpp  Action.h  Assigment12.pro  CMakeLists.txt  CSVRepositoryHelper.cpp  CSVRepositoryHelper.h  Exceptions.cpp  FileRepository.cpp  FileRepository.h  GUI.cpp  GUI.h  GUI.ui  HTMLRepositoryHelper.cpp  HTMLRepositoryHelper.h  InMemoryRepository.cpp  InMemoryRepository.h  InMemoryRepositoryHelper.cpp  InMemoryRepositoryHelper.h  Observer.h  Repository.h  RepositoryHelper.h  Service.cpp  Service.h  Tape.cpp  Tape.h  main.cpp  mylistGUI.cpp  mylistGUI.h  mylistGUI.ui  mylistModel.cpp  mylistModel.h
Tapes UI/: CMakeLists.txt  CSVRepositoryHelper.cpp  CSVRepositoryHelper.h  DynamicVector.h  Exceptions.h  GUI.cpp  GUI.h  HTMLRepositoryHelper.cpp  HTMLRepositoryHelper.h  InMemoryRepositoryHelper.h  RepositoryHelper.h  Service.cpp  Service.h  Tape.cpp  Tape.h  UI.cpp  UI.h  Validator.cpp  Validator.h  main.cpp  resorces.txt  test.cpp  test.h  test.html
Task Manager/: Service.cpp  Service.h  Task.cpp  Task.h  Task_manager.cpp  Task_manager.h  Task_manager.ui  Task_manager.vcxproj  Task_manager.vcxproj.filters  Test.h  input.txt  main.cpp
Task Manager/x64/Debug/Task_manager.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Task_manager.lastbuildstate  Task_manager.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
Task Manager/x64/Debug/moc/: moc_Task_manager.cpp
Task Manager/x64/Debug/rcc/: qrc_Task_manager.cpp
Task Manager/x64/Debug/uic/: ui_Task_manager.h
Vegetables/: Service.cpp  Service.h  Vegetables.cpp  Vegetables.h  Vegetables.ui  Vegetables.vcxproj  Vegetables.vcxproj.filters  Veggie.cpp  Veggie.h  input.txt  main.cpp
Vegetables/x64/Debug/Vegetables.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Vegetables.lastbuildstate  Vegetables.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
Vegetables/x64/Debug/moc/: moc_Vegetables.cpp
Vegetables/x64/Debug/uic/: ui_Vegetables.h
